--- a/main.html
+++ b/main.html
@@ -2,24 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Speed Scrubber</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Custom Video Player</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <div class="wrapper">
-    <video class="flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4" id="video"></video>
-    <div class="controls">
-      <button class="player__button" data-icon="►" aria-label="play/pause">▶</button>
-      <input type="range" class="progress" value="0" min="0" max="100">
-      <div class="progress__filled" style="flex-basis: 0%;"></div>
-      <input type="range" class="volume" value="75" min="0" max="100">
-      <input type="range" class="playbackSpeed" value="1" min="0.5" max="2" step="0.1">
-      <button class="rewind" aria-label="rewind 10 seconds">« 10s</button>
-      <button class="forward" aria-label="skip forward 25 seconds">25s »</button>
+  <div class="player">
+    <video class="player__video viewer" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+    
+    <div class="player__controls">
+      <button class="player__button toggle" title="Toggle Play">►</button>
+      <input type="range" name="volume" class="player__slider" min="0" max="1" step="0.05" value="1">
+      <input type="range" name="playbackSpeed" class="player__slider" min="0.5" max="2" step="0.1" value="1">
+      <button class="player__button rewind" title="Rewind 10 seconds">« 10s</button>
+      <button class="player__button forward" title="Forward 25 seconds">25s »</button>
+      <div class="progress">
+        <div class="progress__filled"></div>
+      </div>
     </div>
   </div>
-
-<script src="./script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
